# news_tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: azure-deploy.yml
alembic/: env.py
alembic/versions/: 0b1e33338644_create_articles_table.py  9a3c632ec0db_initial_migration.py  bc063ddc4668_make_diff_column_nullable.py  c36fd63bc7de_add_article_versioning.py
app/: database.py  dependencies.py  main.py  scheduler.py
app/exeptions/: parser_error.py
app/models/: article.py  article_version.py
app/routers/: articles.py
app/schemas/: article.py  article_version.py
app/services/: article_service.py
app/services/parsers/: base_parser.py  generic_parser.py  nyt_parser.py  parser_factory.py
app/utils/: diff_utils.py
